# ARIA-WatcherFirmware

./: .gitmodules  README.md
examples/factory_firmware/main/: CMakeLists.txt  Kconfig.projbuild  data_defs.h  event_loops.h  idf_component.yml  main.c
examples/factory_firmware/main/app/: app_aria_cam.c  app_aria_cam.h  app_aria_tone.c  app_aria_tone.h  app_audio_player.c  app_audio_player.h  app_audio_recorder.c  app_audio_recorder.h  app_ble.c  app_ble.h  app_cmd.c  app_cmd.h  app_device_info.c  app_device_info.h  app_device_sync.c  app_device_sync.h  app_ota.c  app_ota.h  app_png.c  app_png.h  app_recording.c  app_recording.h  app_rgb.c  app_rgb.h  app_sensecraft.c  app_sensecraft.h  app_sensor.c  app_sensor.h  app_taskflow.c  app_taskflow.h  app_time.c  app_time.h  app_voice_interaction.c  app_voice_interaction.h  app_wifi.c  app_wifi.h  at_cmd.c  at_cmd.h  sound_push2talk.c
examples/factory_firmware/main/sensor/: sensor_i2c.c  sensor_i2c.h  sensor_scd4x.c  sensor_scd4x.h  sensor_sht4x.c  sensor_sht4x.h
examples/factory_firmware/main/task_flow_module/: tf_module_ai_camera.c  tf_module_ai_camera.h  tf_module_alarm_trigger.c  tf_module_alarm_trigger.h  tf_module_debug.c  tf_module_debug.h  tf_module_http_alarm.c  tf_module_http_alarm.h  tf_module_img_analyzer.c  tf_module_img_analyzer.h  tf_module_local_alarm.c  tf_module_local_alarm.h  tf_module_sensecraft_alarm.c  tf_module_sensecraft_alarm.h  tf_module_timer.c  tf_module_timer.h  tf_module_uart_alarm.c  tf_module_uart_alarm.h
examples/factory_firmware/main/util/: factory_info.c  factory_info.h  storage.c  (+4 more)
(+272 files in other folders)
